--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="preload" href="./src/css/style.min.css">
-  <link rel="stylesheet" href="./src/css/style.min.css">
+  <link rel="preload" href="./src/css/style.css">
+  <link rel="stylesheet" href="./src/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&family=Iceland&family=Roboto&display=swap" rel="stylesheet">
@@ -37,8 +37,11 @@
       </header>
 
       <main>
-        <h1 class="font-3-xxl color-g2">THE LAST OF US |</h1>
-        <p class="font-1-l color-text-op">When you are lost in the dark, look for the light, believe in the fireflies.</p>
+        <div class="title-main">
+          <h1 class="font-3-xxl color-g2">THE LAST OF <span>US</span></h1>
+       
+        </div>
+        <p class="font-1-l color-text">When you are lost in the dark, look for the light, believe in the fireflies.</p>
         <div class="btn-main">
           <button class="font-3-xs color-g2 activated">MORE INFO</button>
           <button class="font-3-xs color-g2 inactive">WATCH TEASER</button>
@@ -47,7 +50,7 @@
           <h3 class="font-3-m color-g2">Inside</h3>
 
           <ul class="inside flex font-3-s color-text-op">
-            <li>SURVIVAL</li>
+            <li >SURVIVAL</li>
             <li>RELATIONSHIP</li>
             <li>ADVENTURE</li>
           </ul>
@@ -61,13 +64,13 @@
   <!-- tela 2 -->
 
   <section class="episodes">
-    <div class="flex ep-content container">
+    <div class="flex-column ep-content container">
       <section class="ep-text flex-column">
         <p class="font-1-m color-text">An American post-apocalyptic drama television series created by Craig Mazin and Neil Druckmann for HBO. Twenty years into a pandemic caused by a mass fungal infection, which forces its hosts to transform into zombie-like creatures and collapses society. </p>
         <p class="font-1-m color-text">The series follows Joel (Pedro Pascal), a smuggler tasked with escorting the teenage Ellie (Bella Ramsey) across a post-apocalyptic United States. Guest stars include Nico Parker as Joel's daughter Sarah, Gabriel Luna as Joel's younger brother Tommy, Merle Dandridge as resistance leader Marlene, and Anna Torv as Joel's smuggler partner Tess.</p>
         <p class="font-1-m color-text">The Last of Us was filmed throughout Alberta from July 2021 to June 2022. It is the first HBO series based on a video game, and is a joint production by Sony Pictures Television, PlayStation Productions, Naughty Dog, the Mighty Mint, and Word Games. </p>
       </section>
-      <ol class="ep-list">
+      <ol class="flex ep-list">
       </ol>
     </div>
   </section>
@@ -82,8 +85,8 @@
         </figure>
       </div>
       <div class="ft-info flex-column">
-        <h2 class="font-3-l">PROGRAME O SEU FUTURO AQUI.</h2>
-        <h3 class="font-3-ml">SIGA NOSSAS REDES SOCIAIS</h3>
+        <h2 class="font-3-l">PROGRAM YOUR FUTURE HERE.</h2>
+        <h3 class="font-3-ml">FOLLOW OUR SOCIAL MEDIA</h3>
         <div>
           <a href="https://instagram.com/oaugustoleonardo" target="_blank">
             <img src="./src/img/footer/InstagramIcon.png" alt="">
