--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <p class="font-1-m color-text">The series follows Joel (Pedro Pascal), a smuggler tasked with escorting the teenage Ellie (Bella Ramsey) across a post-apocalyptic United States. Guest stars include Nico Parker as Joel's daughter Sarah, Gabriel Luna as Joel's younger brother Tommy, Merle Dandridge as resistance leader Marlene, and Anna Torv as Joel's smuggler partner Tess.</p>
         <p class="font-1-m color-text">The Last of Us was filmed throughout Alberta from July 2021 to June 2022. It is the first HBO series based on a video game, and is a joint production by Sony Pictures Television, PlayStation Productions, Naughty Dog, the Mighty Mint, and Word Games. </p>
       </section>
-      <ol class="flex ep-list">
+      <ol class="ep-list">
       </ol>
     </div>
   </section>
