--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="preload" href="./src/css/style.css">
-  <link rel="stylesheet" href="./src/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&family=Iceland&family=Roboto&display=swap" rel="stylesheet">
+
+  <link rel="preload" href="./src/css/style.min.css">
+  <link rel="stylesheet" href="./src/css/style.min.css">
   <title>MARATONA KENZIE - The Last of Us</title>
 </head>
 
@@ -36,21 +37,23 @@
         </div>
       </header>
 
+
       <main>
         <div class="title-main">
           <h1 class="font-3-xxl color-g2">THE LAST OF <span>US</span></h1>
-       
+
         </div>
         <p class="font-1-l color-text">When you are lost in the dark, look for the light, believe in the fireflies.</p>
         <div class="btn-main">
           <button class="font-3-xs color-g2 activated">MORE INFO</button>
           <button class="font-3-xs color-g2 inactive">WATCH TEASER</button>
         </div>
+
         <section class="flex-column">
           <h3 class="font-3-m color-g2">Inside</h3>
 
           <ul class="inside flex font-3-s color-text-op">
-            <li >SURVIVAL</li>
+            <li>SURVIVAL</li>
             <li>RELATIONSHIP</li>
             <li>ADVENTURE</li>
           </ul>
@@ -65,13 +68,15 @@
 
   <section class="episodes">
     <div class="flex-column ep-content">
-      <section class="ep-text flex-column  container">
+      <section class="ep-text flex-column container">
         <p class="font-1-m color-text">An American post-apocalyptic drama television series created by Craig Mazin and Neil Druckmann for HBO. Twenty years into a pandemic caused by a mass fungal infection, which forces its hosts to transform into zombie-like creatures and collapses society. </p>
         <p class="font-1-m color-text">The series follows Joel (Pedro Pascal), a smuggler tasked with escorting the teenage Ellie (Bella Ramsey) across a post-apocalyptic United States. Guest stars include Nico Parker as Joel's daughter Sarah, Gabriel Luna as Joel's younger brother Tommy, Merle Dandridge as resistance leader Marlene, and Anna Torv as Joel's smuggler partner Tess.</p>
         <p class="font-1-m color-text">The Last of Us was filmed throughout Alberta from July 2021 to June 2022. It is the first HBO series based on a video game, and is a joint production by Sony Pictures Television, PlayStation Productions, Naughty Dog, the Mighty Mint, and Word Games. </p>
       </section>
-      <ol class="ep-list">
-      </ol>
+      <div>
+        <ol class="ep-list">
+        </ol>
+      </div>
     </div>
   </section>
 
