otimizacao css e responsivo 2

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </div>
         <p class="font-1-l color-text">When you are lost in the dark, look for the light, believe in the fireflies.</p>
         <div class="btn-main">
-          <button class="font-3-xs color-g2 activated">MORE INFO</button>
-          <button class="font-3-xs color-g2 inactive">WATCH TEASER</button>
+          <button class="font-3-xs color-g2 inactive">MORE INFO</button>
+          <button class="font-3-xs color-g2 activated">WATCH TEASER</button>
         </div>
 
         <section class="flex-column">
